xhr.send() => newxhr.send()

--- a/src/notes.html
+++ b/src/notes.html
@@ -128,7 +128,7 @@
                         }
                         }
 
-                        xhr.send()
+                        newxhr.send()
                 }
             } else if (xhr.status === 403) {
                 if (xhr.responseText == "none") {
@@ -156,7 +156,7 @@
                         }
                         }
 
-                        xhr.send()
+                        newxhr.send()
                 }
             } else {
                 console.log("awaiting response")
