--- a/src/notes.html
+++ b/src/notes.html
@@ -67,6 +67,8 @@
             theme: 'snow'
         });
 
+        document.getElementById("editor").style.display = "none";
+
         const waitMs = ms => new Promise(res => setTimeout(res, ms));
         function goToHome() {
             window.location.href = "/";
