--- a/src/notes.html
+++ b/src/notes.html
@@ -51,15 +51,18 @@
                 <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()" type="button">Back</button>
             </fieldset>
         </div>
+    </div>
+    <div id="edit" style="display: none;">
         <div id="editor" style="display: none;"></div>
-        <div id="edit" style="display: none;">
-            <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="saveNoteButton" onclick="saveNote()">Save</button><br>
-            <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()" type="button">Back</button>
-        </div>
-        <br><br>
+        <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="saveNoteButton" onclick="saveNote()">Save</button><br>
+        <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()" type="button">Back</button></div>
     </div>
     <script src="https://cdn.quilljs.com/1.3.6/quill.js" crossorigin="anonymous"></script>
     <script>
+        var quill = new Quill('#editor', {
+            theme: 'snow'
+        });
+
         window.currentEvent = 0;
         window.currentTeam = 0;
 
@@ -83,9 +86,6 @@
 
             xhr.onreadystatechange = async () => {
             if (xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-                    var quill = new Quill('#editor', {
-                        theme: 'snow'
-                    });
                     console.log("200 ok")
                     console.log(xhr.responseText)
                     document.getElementById("viewNoteButton").innerHTML = "Rendering View...";
