change default event

--- a/src/matches.html
+++ b/src/matches.html
@@ -37,8 +37,8 @@
             <fieldset>
                 <label>Event Code: </label><br>
                 <select name="event" id="eventCode">
-                    <option value="CADA" selected>CADA - Sacramento Regional</option>
-                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                    <option value="CADA">CADA - Sacramento Regional</option>
+                    <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
                 </select><br><br>
                 <label>Include All Matches: </label><input id="allmatch" type="checkbox"><br>
                 <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" id="viewMatchButton" onclick="getMatches()">View</button><br>
