--- a/src/notes.html
+++ b/src/notes.html
@@ -42,8 +42,8 @@
             <fieldset id="searchContainer">
                 <label id="ecodeLabel">Event Code: <br></label>
                 <select name="event" id="eventCode">
-                    <option value="CADA" selected>CADA - Sacramento Regional</option>
-                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                    <option value="CADA">CADA - Sacramento Regional</option>
+                    <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
                 </select><br><br>
                 <label id="teamNumLabel"><br><br>Team Number: </label><br>
                 <input type="tel" id="teamNumber">
