--- a/src/topitscout.html
+++ b/src/topitscout.html
@@ -43,8 +43,8 @@
             <fieldset>
                 <label id="eventLabel">Event Code: </label><br>
                 <select name="event" id="eventCode">
-                    <option value="CADA" selected>CADA - Sacramento Regional</option>
-                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                    <option value="CADA">CADA - Sacramento Regional</option>
+                    <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
                 </select>
             </fieldset>
             <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" id="viewTeamsButton" onclick="getUnscoutedTeams()">View</button><br>
