--- a/src/main.html
+++ b/src/main.html
@@ -64,10 +64,10 @@
             </select>
         </fieldset>
 
-        <fieldset>
+        <!--<fieldset>
             <label>Your Name<br></label>
             <input type="text" name="name" required>
-        </fieldset>
+        </fieldset>-->
 
         <fieldset>
             <label>Number of the Team you are Scouting<br></label>
