--- a/src/pit.html
+++ b/src/pit.html
@@ -34,10 +34,10 @@
                         <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
                     </select>
                 </fieldset>
-                <fieldset>
+                <!--<fieldset>
                     <label>Your Name<br></label>
                     <input type="text" name="name" required>
-                </fieldset>
+                </fieldset>-->
 
                 <fieldset>
                     <label>Number of the Team you are Scouting<br></label>
