team rank numbers

--- a/src/teams.html
+++ b/src/teams.html
@@ -83,6 +83,7 @@
                 <h3 id="eventCodeDisplay"></h3>
                 <table>
                     <tr id="preInsert">
+                      <th>Rank</th>
                       <th>Team Number</th>
                       <th colspan="2">Match Performance Score (Avg)</th> 
                     </tr>
