--- a/src/main.html
+++ b/src/main.html
@@ -189,13 +189,13 @@
         //data validation
         var allTeams = [];
 
-        document.getElementById('eventCode').addEventListener('change', (event) => function(){
+        document.getElementById('eventCode').addEventListener('change', function(event){
             fetch(`/api/events/${document.getElementById('eventCode').value}/teams`, {
                 credentials: "include"
             }).then((response) => allTeams = response.split(",")).catch();
         });
 
-        document.getElementById('validateTeamInput').addEventListener('change', (event) => function(){
+        document.getElementById('validateTeamInput').addEventListener('change', function(event){
             if (allTeams.includes(document.getElementById('validateTeamInput').value)) {
                 document.getElementById('invalidTeamInput').style.display = "none";
                 document.getElementById('submitButton').disabled = "false";
