--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -45,8 +45,7 @@
         <div>
             <h1 id="title" style="font-family: 'raleway-300'">766 Casino<br><span class="gametitle">Single-Player Blackjack</span></h1>
             <canvas id="bjCanvas" width="128" height="128" style="display: none;"></canvas><br>
-            <button id="playBtn" type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="startBlackjack(false)">Play</button><br><button id="backBtn" type="button" style="color: #68C3E2; background-color: #121212; border-radius: 0.5rem;; border-style: solid; border-color: #121212; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()">Back</button><br><button id="playBtn" type="button" style="color: #fff; background-color: rgba(0,0,0,0); border-radius: 0.5rem; border-style: solid; border-color: rgba(0,0,0,0); border-width: 0.875rem;; margin-top: 1rem;" onclick="startBlackjack(true)">Play With Programming Deck</button>
-            </fieldset>
+            <button id="playBtn" type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="startBlackjack(false)">Play</button><br><button id="backBtn" type="button" style="color: #68C3E2; background-color: #121212; border-radius: 0.5rem; border-style: solid; border-color: #121212; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button><br><button id="playProgBtn" type="button" style="color: #fff; background-color: rgba(0,0,0,0); border-radius: 0.5rem; border-style: solid; border-color: rgba(0,0,0,0); border-width: 0.875rem; margin-top: 1rem;" onclick="startBlackjack(true)">Play With Programming Deck</button>
         </div>
     </div>
     <script src="assets/blackjack.js"></script>
