--- a/src/fantasy.html
+++ b/src/fantasy.html
@@ -45,8 +45,7 @@
         <div>
             <h1 id="title" style="font-family: 'raleway-300'">766 "scouting"<br><span class="gametitle">fantasy frc</span></h1>
             <canvas id="frcCvs" width="128" height="128" style="display: none;"></canvas><br>
-            <button id="playBtn" type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="startGame()">Play</button><br><button id="backBtn" type="button" style="color: #68C3E2; background-color: #121212; border-radius: 0.5rem;; border-style: solid; border-color: #121212; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()">Back</button>
-            </fieldset>
+            <button id="playBtn" type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="startGame()">Play</button><br><button id="backBtn" type="button" style="color: #68C3E2; background-color: #121212; border-radius: 0.5rem; border-style: solid; border-color: #121212; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
         </div>
     </div>
     <script src="assets/fantasy.js"></script>
