--- a/src/topitscout.html
+++ b/src/topitscout.html
@@ -47,9 +47,8 @@
                     <option value="CASJ" selected>CASJ - Silicon Valley Regional</option>
                 </select>
             </fieldset>
-            <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem;; border-style: solid; border-color: #68C3E2; border-width: 0.875rem;; margin-top: 1rem;" id="viewTeamsButton" onclick="getUnscoutedTeams()">View</button><br>
-            <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem;; border-style: solid; border-color: #FFB600; border-width: 0.875rem;; margin-top: 1rem;" onclick="goToHome()">Back</button>
-            </fieldset>
+            <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewTeamsButton" onclick="getUnscoutedTeams()">View</button><br>
+            <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
         </form>
         <br><br>
     </div>
