--- a/src/main.html
+++ b/src/main.html
@@ -4,7 +4,7 @@
 <head>
     <title>Match Scouting - 766 Scouting</title>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
@@ -86,7 +86,7 @@
         <fieldset>
             <!--INPUT TO SET FOR GRID DATA-->
             <input value="000000000000000000000000000" type="number" name="game12" id="griddata" hidden>
-            <br><label><strong id="vstrong">During AUTO, the robot...</strong></label>
+            <br><label><strong class="vstrong">During AUTO, the robot...</strong></label>
             <fieldset><br>
                 <input value="true" type="checkbox" name="game1" class="checkbig"><span>&emsp;Completely left COMMUNITY<br></span><br>
                 <input value="true" type="checkbox" name="game2" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br>
@@ -131,7 +131,7 @@
             </div>
             <p><strong>Bottom of grid</strong></p>
         </fieldset>
-        <br><label><strong id="vstrong">During TELEOP, the robot...</strong></label>
+        <br><label><strong class="vstrong">During TELEOP, the robot...</strong></label>
         <fieldset><br>
             <input value="true" type="checkbox" name="game6" class="checkbig"><span>&emsp;Scored on a bottom ROW<br></span><br>
             <input value="true" type="checkbox" name="game7" class="checkbig"><span>&emsp;Scored on a middle ROW<br></span><br>
@@ -161,7 +161,7 @@
         <br>
         <h2 class="gameflair1">Post Game</h2>
         <fieldset>
-            <label>Estimate the cycle time of the robot <span id="tooLong" style="color: red; display: none;">4 digits or less!</span><br></label></label><br>
+            <label>Estimate the cycle time of the robot <span id="tooLong" style="color: red; display: none;">4 digits or less!</span><br></label><br>
             <input type="tel" name="game11" class="smallerInput" id="validateLength" required> seconds
         </fieldset>
         <fieldset>
