--- a/src/settings.html
+++ b/src/settings.html
@@ -3,7 +3,7 @@
 <head>
     <title>Settings - 766 Scouting</title>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="language" content="English">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
@@ -57,7 +57,7 @@
                     if (sw) {
                         sw.unregister().then(() => {
                             navigator.serviceWorker.register('sw.js');
-                        }).catch((error) => {console.log(error);});;
+                        }).catch((error) => {console.log(error);});
                     }
                 }).catch((error) => {console.log(error);});
             }
