--- a/src/fantasy.html
+++ b/src/fantasy.html
@@ -33,7 +33,6 @@
         }
 
         canvas {
-            background-color: #121212;
             image-rendering: crisp-edges;
         }
     </style>
@@ -41,10 +40,25 @@
 
 <body id="body" class="dark-mode">
     <script>themeHandle()</script>
-    <div class="container" id="search" style="display: flex;"> 
+    <div id="canvasParent">
+        <canvas id="frcCvs_0" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_1" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_2" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_3" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_4" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_5" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_6" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_7" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_8" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_9" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_10" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_11" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_12" width="128" height="128" style="display: none; position: absolute;"></canvas>
+        <canvas id="frcCvs_12" width="128" height="128" style="display: none; position: absolute;"></canvas>
+    </div>
+    <div class="container" style="display: flex;"> 
         <div>
             <h1 id="title" style="font-family: 'raleway-300'">766 "scouting"<br><span class="gametitle">fantasy frc</span></h1>
-            <canvas id="frcCvs" width="128" height="128" style="display: none;"></canvas><br>
             <button id="playBtn" type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="startGame()">Play</button><br><button id="backBtn" type="button" style="color: #68C3E2; background-color: #121212; border-radius: 0.5rem; border-style: solid; border-color: #121212; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
         </div>
     </div>
