allow sessions to persist

--- a/src/main.html
+++ b/src/main.html
@@ -68,10 +68,10 @@
             <label>Match Number<br></label>
             <input type="tel" name="match" class="smallerInput" required>
             <select name="level">
-                <option value="practice">Practice</option>
-                <option value="qualification" selected>Qual</option>
-                <option value="upper">Upper Bracket</option>
-                <option value="lower">Lower Bracket</option>
+                <option value="Practice">Practice</option>
+                <option value="Qualification" selected>Qual</option>
+                <option value="Upper">Upper Bracket</option>
+                <option value="Lower">Lower Bracket</option>
             </select>
         </fieldset>
 
